# discord-gdpr-counter

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: errors.rs  file_operations.rs  main.rs
