[package]
name = "discord_gdpr_message_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
zip = "2.2.0"
tempfile = "3.3"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
