[package]
name = "discord-gdpr-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", default-features = true, features = ["derive"] }
zip = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
tempfile = "3.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
