[package]
name = "discord-gdpr-counter"
version = "0.1.0"
edition = "2021"

[features]
default = []
zip = ["dep:zip", "dep:tempfile"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
serde =  "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.zip]
version = "2.2.0"
optional = true

[dependencies.tempfile]
version = "3.3"
optional = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
